# hal_realtek

ameba/: Kconfig
ameba/amebad/: CMakeLists.txt
ameba/common/: CMakeLists.txt
ameba/common/bluetooth/: CMakeLists.txt  Kconfig
ameba/common/bluetooth/driver/hci/: hci_if_zephyr.h
ameba/common/bluetooth/driver/hci/hci_process/: hci_common.c  hci_download_v1.c  hci_download_v2.c  hci_download_v3.c  hci_process.c  hci_standalone.c
ameba/common/bluetooth/driver/hci/hci_transport/: hci_h4.c
ameba/common/bluetooth/driver/inc/: dlist.h
ameba/common/bluetooth/driver/inc/hci/: hci_common.h  hci_transport.h
ameba/common/bluetooth/driver/platform/amebad/: CMakeLists.txt
ameba/common/bluetooth/driver/platform/amebad/hci/: bt_mp_patch.c  bt_normal_patch.c  hci_platform.c  hci_uart.c
ameba/common/bluetooth/driver/platform/amebad/inc/: hci_platform.h
ameba/common/bluetooth/driver/platform/amebadplus/hci/: bt_mp_patch.c  bt_normal_patch.c  hci_platform.c  hci_uart.c
ameba/common/bluetooth/driver/platform/amebagreen2/hci/: bt_mp_patch.c  bt_normal_patch.c  hci_platform.c  hci_uart.c
ameba/common/bluetooth/osif/: bt_debug.c  osif.c
ameba/common/bluetooth/rtk_coex/: rtk_coex.c  rtk_coex.h
ameba/common/os_wrapper/include/: os_wrapper.h  os_wrapper_queue.h  os_wrapper_task.h  os_wrapper_timer.h
ameba/common/rtk_coex/: CMakeLists.txt  Kconfig
ameba/common/rtk_coex/source/: rtw_coex_api_ext.h  rtw_coex_host_api.h  rtw_coex_ipc.h
ameba/scripts/: flash.py  update_blobs.py
ameba/scripts/flash/: Settings.json
bee/util/: CMakeLists.txt
zephyr/: module.yml
(+40 files in other folders)
